Hotfix to alignment issue.

--- a/main.css
+++ b/main.css
@@ -4258,6 +4258,7 @@ body {
 section {
   padding-bottom: 40px;
   overflow: hidden;
+  float: left;
 }
 .brothers {
   width: 780px;
